<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.assignment_2.servingsizecalculator.SecondActivity">

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="47dp"
        android:text="@string/cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnOK"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="47dp" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="122dp"
        android:text="@string/ok"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="22dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="245dp"
        android:layout_height="0dp"
        android:layout_marginBottom="9dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnCancel"
        app:layout_constraintEnd_toStartOf="@+id/btnCancel"
        app:layout_constraintStart_toStartOf="@+id/btnCancel"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_name"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pot_name"
            tools:layout_editor_absoluteX="102dp"
            tools:layout_editor_absoluteY="18dp" />

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pot_weight_g"
            android:inputType="number"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            tools:layout_editor_absoluteY="49dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="9dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnOK"
        app:layout_constraintEnd_toStartOf="@+id/btnOK"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        android:layout_marginRight="21dp"
        android:layout_marginLeft="4dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/EditText_Pot_Name"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="30dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/EditText_Pot_Weight"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="69dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
